[project]
name = "tools"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "pikepdf>=9.4.2",
    "typer>=0.13.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.7",
    "mkdocs-material>=9.5.45",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
