[project]
name = "tools"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "pikepdf>=9.4.2",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "mkdocs-material>=9.5.46",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]

[tool.mypy]
strict = true
