[project]
name = "tools"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "pikepdf>=9.5",
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "coverage>=7.8",
    "mkdocs-material>=9.6",
    "mypy>=1.15",
    "pre-commit>=4.2",
    "pyright>=1.1",
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
